Fix pagination and datatable vertical alignment.

--- a/frontend/scss/azuracast/overrides/_tables.scss
+++ b/frontend/scss/azuracast/overrides/_tables.scss
@@ -20,9 +20,9 @@ div.datatable-main {
     &.table-selectable {
       tr > th:first-child,
       tr > td:first-child {
-        width: 0.1%;
+        width: .1%;
         white-space: nowrap;
-        padding-right: 0;
+        padding-right: 0.1rem;
       }
     }
 
@@ -30,6 +30,13 @@ div.datatable-main {
     td.shrink {
       width: 0.1%;
       white-space: nowrap;
+    }
+
+    .form-check,
+    .form-check input,
+    .form-check label {
+      margin: 0;
+      padding: 0;
     }
   }
 }
